--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/aono.css">
+    <link rel="stylesheet" href="./CSS/reset.css">
     <title>蒼乃建設ホームページ</title>
 </head>
 
 <body>
-    <header>
-        <div id="HEADER">
+    <header id="HEAD">
+        <div class="HEADER">
             <h1><img src="./img/header/header_logo.png" alt=""></h1>
             <nav>
                 <ul class="hea-list">
